# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.1 OR LicenseRef-Slint-commercial

[package]
name = "slint-cpp"
version = "1.1.1"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.1 OR LicenseRef-Slint-commercial"
description = "Slint C++ integration"
repository = "https://github.com/slint-ui/slint"
homepage = "https://slint.dev"
publish = false
rust-version.workspace = true
# prefix used to convey path to generated includes to the C++ test driver
links = "slint_cpp"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

# Note, these features need to be kept in sync (along with their defaults) in
# the C++ crate's CMakeLists.txt
[features]
#interpreter = ["slint-interpreter"]
#testing = ["i-slint-backend-testing"] # Enable some function used by the integration tests
#
#backend-qt = ["i-slint-backend-selector/i-slint-backend-qt"]
#backend-winit = ["i-slint-backend-selector/backend-winit"]
#backend-winit-x11 = ["i-slint-backend-selector/backend-winit-x11"]
#backend-winit-wayland = ["i-slint-backend-selector/backend-winit-wayland"]
#renderer-winit-femtovg = ["i-slint-backend-selector/renderer-winit-femtovg"]
#renderer-winit-skia = ["i-slint-backend-selector/renderer-winit-skia"]
#renderer-winit-skia-opengl = ["i-slint-backend-selector/renderer-winit-skia-opengl"]
#renderer-winit-skia-vulkan = ["i-slint-backend-selector/renderer-winit-skia-vulkan"]
#renderer-winit-software = ["i-slint-backend-selector/renderer-winit-software"]
#gettext = ["i-slint-core/gettext-rs"]
#accessibility = ["i-slint-backend-selector/accessibility"]
experimental = ["i-slint-renderer-skia", "raw-window-handle", "experimental-platform"]
experimental-platform = []

std = ["image", "i-slint-core/default", "i-slint-backend-selector"]

default = ["std", "backend-winit", "renderer-winit-femtovg", "backend-qt", "experimental"]

[dependencies]
i-slint-backend-selector = { version = "=1.1.1", path="../../internal/backends/selector", optional = true }
i-slint-backend-testing = { version = "=1.1.1", path="../../internal/backends/testing", optional = true }
i-slint-renderer-skia = { version = "=1.1.1", path="../../internal/renderers/skia", optional = true, features = ["x11", "wayland"] }
i-slint-core = { version = "=1.1.1", path="../../internal/core", default-features = false, features = ["ffi"] }
slint-interpreter = { version = "=1.1.1", path="../../internal/interpreter", default-features = false, features = ["ffi", "compat-1-0"], optional = true }
raw-window-handle = { version = "0.5", optional = true }
# Enable image-rs' default features to make all image formats to C++ users
image = { version = "0.24.0", optional = true }

[build-dependencies]
anyhow = "1.0"
cbindgen = "0.24"
proc-macro2 = "1.0.11"
i-slint-common = { version = "=1.1.1", path="../../internal/common" }
