# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0

[package]
name = "slint-js"
description = "Internal Slint Runtime Library for JavaScript (Node.js via napi, browser via wasm-bindgen)."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
categories = ["gui", "development-tools"]
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
# The default features are for the native (Node.js) build. wasm builds must
# pass --no-default-features: the wasm target section below hardwires the
# winit backend and femtovg renderer.
# Keep in sync with features in nightly_snapshot.yaml, cpp_package.yaml, slint_tool_binary.yaml, and api/python/slint/Cargo.toml
default = ["backend-linuxkms-noseat", "backend-winit", "renderer-femtovg", "renderer-skia", "accessibility"]

backend-qt = ["slint-interpreter/backend-qt"]
backend-winit = ["slint-interpreter/backend-winit"]
backend-winit-x11 = ["slint-interpreter/backend-winit-x11"]
backend-winit-wayland = ["slint-interpreter/backend-winit-wayland"]
backend-linuxkms = ["slint-interpreter/backend-linuxkms"]
backend-linuxkms-noseat = ["slint-interpreter/backend-linuxkms-noseat"]
renderer-femtovg = ["slint-interpreter/renderer-femtovg"]
renderer-femtovg-wgpu = ["slint-interpreter/renderer-femtovg-wgpu"]
renderer-skia = ["slint-interpreter/renderer-skia"]
renderer-skia-opengl = ["slint-interpreter/renderer-skia-opengl"]
renderer-skia-vulkan = ["slint-interpreter/renderer-skia-vulkan"]
renderer-software = ["slint-interpreter/renderer-software"]
accessibility = ["slint-interpreter/accessibility"]

# The features below are additive and binary-compatible with the default build:
# they don't change the napi surface, only enabling extra runtime behavior. They
# depend on the unpublished i-slint-backend-testing crate.
#
# `system-testing` and `mcp` (the auto-started system-testing/MCP servers via the
# backend selector) are what the shipped "dev" binary enables (slint-ui-dev, see
# binaries-dev.json); `build:debug` builds that same binary locally. `testing`
# (mocked time and synthetic input) is independent: it is enabled by
# `build:testing` for this crate's own unit tests and is not part of the dev
# binary.
testing = ["dep:i-slint-backend-testing"]
system-testing = ["dep:i-slint-backend-testing", "i-slint-backend-selector/system-testing"]
mcp = ["dep:i-slint-backend-testing", "i-slint-backend-selector/mcp"]

console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
i-slint-compiler = { workspace = true, features = ["default"] }
i-slint-core = { workspace = true, features = ["default"] }
slint-interpreter = { workspace = true, default-features = false, features = ["std", "display-diagnostics", "internal", "compat-1-2"] }
send_wrapper = { workspace = true }
css-color-parser2 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
i-slint-core = { workspace = true, features = ["gettext-rs"] }
i-slint-backend-selector = { workspace = true }
slint-interpreter = { workspace = true, default-features = false, features = ["system-tray"] }
spin_on = { workspace = true }
itertools = { workspace = true }
# Removed by node_package xtask
i-slint-backend-testing = { workspace = true, optional = true, features = ["internal"] }
smol_str = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
slint-interpreter = { workspace = true, default-features = false, features = ["backend-winit", "renderer-femtovg"] }
i-slint-backend-winit = { workspace = true }
vtable = { workspace = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.44"
wasm-bindgen-futures = { version = "0.4.18" }
wasm-bindgen = { version = "0.2.66" }
web-sys = { workspace = true, features = ["Request", "RequestInit", "RequestMode", "Response", "Window"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"

[target.'cfg(unix)'.dependencies]
libloading = "0.9"
async-io = "2"

[build-dependencies]
napi-build = "2"
i-slint-common = { workspace = true }
