# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.1 OR LicenseRef-Slint-commercial

[package]
name = "slint-napi"
description = "Internal Slint Runtime Library for NodeJS API."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
categories = ["gui", "development-tools"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.0", default-features = false, features = ["napi8"] }
napi-derive = "2.12.2"
i-slint-compiler = { workspace = true, features = ["default"] }
i-slint-core = { workspace = true, features = ["default"] }
slint-interpreter = { workspace = true, features = ["default", "display-diagnostics"] }
slint = { workspace = true, features = ["compat-1-2" ] }
spin_on = "0.1"
css-color-parser2 = { workspace = true }
send_wrapper = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.26.2", features = ["poll"] }

[build-dependencies]
napi-build = "2.0.1"
