# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.1 OR LicenseRef-Slint-commercial

[package]
name = "slint-napi"
description = "Internal Slint Runtime Library for NodeJS API."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
categories = ["gui", "development-tools"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.0", default-features = false, features = ["napi8"] }
napi-derive = "2.12.2"
i-slint-compiler = { version = "=1.3.0", path="../../internal/compiler" }
i-slint-core = { version = "=1.3.0", path="../../internal/core" }
slint-interpreter = { version = "=1.3.0", path="../../internal/interpreter",  features = ["display-diagnostics"] }
spin_on = "0.1"

[build-dependencies]
napi-build = "2.0.1"
